--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
 }
 
 .heading h1{
-    font-size: 40px;
+    font-size: 50px;
     text-align: center;
     font-weight: 700; 
     font-family: 'Poppins', sans-serif;
@@ -95,15 +95,16 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 .my-recipies{
-   padding-left: 15%;
+   padding-left: 5%;
    padding-right: 5%;
    margin-bottom: 60px;
 }
 .three-row-content{
    width: 30%;
    margin-left: 2%;
+   margin-right: 2%;
    background-color: white;
-   box-shadow: 20px 20px 45px rgb(196, 196, 196);
+   box-shadow: 10px 10px 45px rgb(201, 196, 196);
    border-radius: 20px;
 }
 .three-row-content img{
@@ -117,7 +118,7 @@ body{
     box-shadow: 3px 3px 15px rgb(241, 238, 238);
 }
 .three-row-content h2{
-    font-size: 20px;
+    font-size: 25px;
     font-weight: 800;
     margin-left: 35px;
     padding: 5px;
@@ -129,4 +130,36 @@ body{
     padding: 5px;
     color: #18191F;
     font-family: 'Poppins', sans-serif;
+}
+
+.social-media-accievement{
+    width: 77%;
+    margin: 0 auto 60px auto;
+    display: flex;
+    padding-left: 5%;
+    padding-right: 5%;
+    box-shadow: 10px 10px 45px rgb(192, 189, 189);
+    margin-bottom: 69px;
+    border-radius: 20px;
+}
+.social-item{
+    width: 30%;
+    padding: 30px 90px;
+}
+.social-item h1{
+    font-size: 50px;
+    margin-bottom: 1px;
+}
+.social-item p{
+    font-size: 18px;
+}
+
+footer{
+    background-color: rgb(4, 2, 22);
+    color: white;
+    text-align: center;
+    padding: 30px 0px 120px 0px;
+}
+.gray-color{
+    color: #707070;
 }
